# FiDiTi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  plot.py
Examples/: CMakeLists.txt
Examples/ViennaPS/holeEtching/: FDTD.hpp  config.txt  holeEtching.cpp
Examples/ViennaPS/photoDiode/: FDTD.hpp  config.txt  geometry.hpp  photoDiode.cpp
Examples/ViennaPS/photodiode/: CMakeLists.txt  FDTD.hpp  config.txt  geometry.hpp  photodiode.cpp
cmake/: Config.cmake.in
include/FiDiTi/: FDTD.hpp  config.hpp  par.hpp
include/FiDiTi/Math/: Rect.hpp  Vec.hpp  Vec.inl
include/FiDiTi/Util/: Array.hpp  Time.hpp
src/: main.cpp
